tests/negative/MicroJuvix/NoStrictlyPositiveDataTypes/E2.mjuvix
module E2;

axiom B : Type;
inductive X  {
  c : (X -> B) -> X;
};

end;
